Mailer sends emails but doesn't reset password yet

--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,5 @@
 
 DATABASE_URL="postgresql://postgres:123321123566@localhost:5434/PVPDB?schema=public"
 JWT_SECRET="PVP-asdsadnubadblbhclbawyebyuw161561   5dsaas"
+USER="snoozy053@gmail.com"
+PASSWORD="iqolpriivsdhppza"
