server: fixed role constraints on user, created a seed to fill enumerator tables with data

--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,11 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
+  
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
+  
   "dependencies": {
     "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/common": "^10.0.0",
