--- a/STracker/app/src/main/AndroidManifest.xml
+++ b/STracker/app/src/main/AndroidManifest.xml
@@ -4,8 +4,10 @@
 
     <uses-feature android:name="android.hardware.sensor.stepcounter" android:required="true"/>
     <uses-feature android:name="android.hardware.sensor.stepdetector" android:required="true"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
     <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -31,6 +33,12 @@
             android:name=".LoginActivity"
             android:label="Login">
         </activity>
+
+        <service
+            android:name=".tracking.TrackingService"
+            android:enabled="true"
+            android:exported="false" />
+
     </application>
 
 </manifest>
