--- a/server/package.json
+++ b/server/package.json
@@ -19,11 +19,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
-  
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
-  
   "dependencies": {
     "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/common": "^10.0.0",
@@ -36,6 +34,7 @@
     "argon2": "^0.31.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^3.4.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
