Images now save in database as url

--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,5 @@ DATABASE_URL="postgresql://postgres:123321123566@localhost:5434/PVPDB?schema=pub
 JWT_SECRET="PVP-asdsadnubadblbhclbawyebyuw161561   5dsaas"
 USER="snoozy053@gmail.com"
 PASSWORD="iqolpriivsdhppza"
+GROUP_PHOTO_PATH="http://localhost:3333/uploads/groupimages/"
+BANNER_PHOTO_PATH="http://localhost:3333/uploads/bannerimages/"
