Now it shows how much points achievement is worth and in group page you can see group picture and banner picture

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ ehthumbs.db
 Thumbs.db
 #ignore node_modules
 /K378-BISPIS/node_modules
+/K378-BISPIS/server/uploads/bannerimages/*
+/K378-BISPIS/server/uploads/groupimages/*
 
 #ignore .idea
 /K378-BISPIS/.idea
