--- a/server/.env
+++ b/server/.env
@@ -10,3 +10,4 @@ USER="snoozy053@gmail.com"
 PASSWORD="iqolpriivsdhppza"
 GROUP_PHOTO_PATH="http://localhost:3333/uploads/groupimages/"
 BANNER_PHOTO_PATH="http://localhost:3333/uploads/bannerimages/"
+USER_PHOTO_PATH="http://localhost:3333/uploads/userimages/"
