--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,9 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.8",
     "@nestjs/serve-static": "^4.0.1",
+    "@nestjs/websockets": "^10.3.8",
     "@prisma/client": "^5.10.2",
     "argon2": "^0.31.2",
     "class-transformer": "^0.5.1",
