--- a/STracker/app/build.gradle
+++ b/STracker/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    implementation 'io.socket:socket.io-client:2.0.1'
 }
