Shop item create+update

--- a/server/.env
+++ b/server/.env
@@ -11,3 +11,4 @@ PASSWORD="iqolpriivsdhppza"
 GROUP_PHOTO_PATH="http://localhost:3333/uploads/groupimages/"
 BANNER_PHOTO_PATH="http://localhost:3333/uploads/bannerimages/"
 USER_PHOTO_PATH="http://localhost:3333/uploads/userimages/"
+ITEM_PHOTO_PATH="http://localhost:3333/uploads/itemimages/"
