--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
+    "leaflet": "^1.9.4",
     "mui-color-input": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.5",
